# turnament_organizer

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  application.py  browser.py  command.py  logger.py  pyproject.toml  requirements.txt  runner.py  turnament.py
Application/: __init__.py  actions.py  browser.py  logger.py  sql_utils.py  turnament.py
Application/Interfaces/: api.py
Application/Interfaces/Command/: __init__.py  cli.py
Organization/: __init__.py  player.py  round.py  system.py  table.py
Organization/Models/: __init__.py  player.py  round.py  table.py
Resources/: __init__.py  categories.py  systems.py
Systems/: __init__.py  _base.py  _circular.py  _creation.py  _single_elimination.py  _swiss.py
Templates/: base.html  home.html  round.html  round.py
Templates/Styles/: .gitignore  app.js  home.js  modals.js  vue_logic.js
Templates/partials/: modal_add_player.html  modal_open.html  modal_remove.html  modal_set_result.html  modal_start.html  modal_suspend.html  player_list_init.html  player_stats.html  players_view.html  results.html  round_view.html  welcome.html
requirements/: requirements.txt
resources/: __init__.py  categories.py  systems.py
tests/: __init__.py  test_pairings.py
